# FYP

./: .gitignore  CMakeLists.txt  app.py  egan_auth.db
core_cpp/: UserManager.cpp  UserManager.h
python_binding/: binding.cpp
templates/: change_password.html  dashboard.html  forgot_password.html  login.html  register.html  reset_password.html  verify_2fa.html
tests/: catch.hpp  test_usermanager.cpp
